k8s/apptest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apptest
    environment: development
  name: apptest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apptest
      environment: development
  template:
    metadata:
      labels:
        app: apptest
        environment: development
    spec:
      containers:
        - name: apptest
          image: aioria84/apptest-devops:v3
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /status/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
