k8s/apptest-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apptest
  labels:
    app: apptest-svc
  name: apptest-svc
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: apptest
