k8s/postgres-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apptest
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  template:
    metadata:
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - image: postgres:14-alpine
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: apptest
  labels:
    io.kompose.service: postgres
  name: postgres-svc
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgres
