k8s/apptest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apptest
  namespace: apptest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apptest-svc
            port:
              number: 8080
